UtahLiveDataTest/src/objects/KeyPerformanceIndicator__c.object
<CustomObject>
    <description>[Business] Defines all the Key performance indicators for measurement</description>
    <fields>
        <fullName>Class__c</fullName>
        <description>Measurement of class</description>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KPI</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HideEditDeleteButton__c</fullName>
        <formula>ISPICKVAL( Status__c , &apos;Active&apos;)</formula>
        <label>HideEditDeleteButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KeyPerformanceIndicator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type</label>
        <referenceTo>KeyPerformanceIndicator__c</referenceTo>
        <relationshipName>Key_Performance_Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MST: Key Performance Indicator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>KeyPerformanceIndicator__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Performance Indicators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>